fermentor/json_dict.txt
$ python2.7
Python 2.7.10 (default, Sep  7 2015, 13:51:49) 
[GCC 5.2.0] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> import json
>>> simpleList = []
>>> 
>>> dictOne = {}
>>> dictOne = dict(one=1, two=2, three=3)
>>> dictTwo = dict(one=1, two=2, three=3)
>>> dictThree = dict(one=1, two=2, three=3)
>>> 
>>> simpleList.append(dictOne)
>>> simpleList.append(dictTwo)
>>> simpleList.append(dictThree)
>>> 
>>> print json.dumps(simpleList)
[{"three": 3, "two": 2, "one": 1}, {"three": 3, "two": 2, "one": 1}, {"three": 3, "two": 2, "one": 1}]
>>> bigDict = {records=simpleList}
  File "<stdin>", line 1
    bigDict = {records=simpleList}
                      ^
SyntaxError: invalid syntax
>>> bigDict = {records:simpleList}
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'records' is not defined
>>> bigDict = {'records':simpleList}
>>> 
>>> print json.dumps(bigDict)
{"records": [{"three": 3, "two": 2, "one": 1}, {"three": 3, "two": 2, "one": 1}, {"three": 3, "two": 2, "one": 1}]}
>>> 
>>> 

